Update ad-hoc.yml for Azure Pipelines

--- a/.pipelines/ad-hoc.yml
+++ b/.pipelines/ad-hoc.yml
@@ -33,9 +33,7 @@ jobs:
 
       az account set -s $(subscriptionId)
       az group list -o table
-      az vmss delete -n rp-vmss-a87941f6 -g aro-int-eastus
-      az vmss delete -n rp-vmss-bf928d67 -g aro-int-eastus
-      az vmss delete -n rp-vmss-de63b69f -g aro-int-eastus
+      az vmss delete -n ci-vmss -g e2einfra-eastus
 
     displayName: ⚙️ Ad-hoc action
 
