move test/util/infra into separate cluster tooling

--- a/.pipelines/templates/template-prod-e2e-steps.yml
+++ b/.pipelines/templates/template-prod-e2e-steps.yml
@@ -23,6 +23,7 @@ steps:
     set -x
     . ./hack/e2e/run-rp-and-e2e.sh
 
+    export CI=true
     run_e2e
   displayName: 🚀 Run ${{ parameters.location }} E2E
 - template: ./template-az-cli-logout.yml
