--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -14,7 +14,8 @@ jobs:
   steps:
   - template: ./templates/template-checkout.yml
   - script: |
-      git remote add mirror https://$(mirror-location)
+      git remote add mirror https://$(mirror-location) >/dev/null
       git fetch origin
+      git branch -r | grep -v '\->' | while read remote; do git branch --track "${remote#origin/}" "$remote"; done
       git push https://$(vsts-token)@$(mirror-location) -u --all
     displayName: Mirror ARO-RP
