--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -15,7 +15,8 @@ jobs:
   - template: ./templates/template-checkout.yml
   - script: |
       git remote add mirror https://$(mirror-location) >/dev/null
-      git fetch origin
+      git checkout master
+      git pull
       git branch --track origin/master master >/dev/null
       git push https://$(vsts-token)@$(mirror-location) -u --all
     displayName: Mirror ARO-RP
