--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -14,7 +14,5 @@ jobs:
   steps:
   - template: ./templates/template-checkout.yml
   - script: |
-      git remote add mirror https://$(mirror-location) >/dev/null
-      git branch --track origin/master master >/dev/null
-      git push https://$(vsts-token)@$(mirror-location) master:master --force
+      git push https://$(vsts-token)@$(mirror-location) master:master
     displayName: Mirror ARO-RP
