Update sync-to-vsts.yml for Azure Pipelines

--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -14,5 +14,6 @@ jobs:
   steps:
   - template: ./templates/template-checkout.yml
   - script: |
+      git fetch origin --all
       git push https://$(vsts-token)@$(mirror-location) master:master
     displayName: Mirror ARO-RP
