--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -15,5 +15,6 @@ jobs:
   - template: ./templates/template-checkout.yml
   - script: |
       git fetch origin
-      git push https://$(vsts-token)@$(mirror-location) master:master
+      git branch -r
+      git push https://$(vsts-token)@$(mirror-location) master:master --force
     displayName: Mirror ARO-RP
