--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -15,6 +15,5 @@ jobs:
   - template: ./templates/template-checkout.yml
   - script: |
       git fetch origin
-      git branch -r
-      git push https://$(vsts-token)@$(mirror-location) master:master --force
+      git push https://$(vsts-token)@$(mirror-location) origin/master:master --forc
     displayName: Mirror ARO-RP
