--- a/.pipelines/sync-to-vsts.yml
+++ b/.pipelines/sync-to-vsts.yml
@@ -15,5 +15,5 @@ jobs:
   - template: ./templates/template-checkout.yml
   - script: |
       git fetch origin
-      git push https://$(vsts-token)@$(mirror-location) origin/master:master --forc
+      git push https://$(vsts-token)@$(mirror-location) origin/master:master --force
     displayName: Mirror ARO-RP
