--- a/.pipelines/templates/template-job-deploy-azure-env.yml
+++ b/.pipelines/templates/template-job-deploy-azure-env.yml
@@ -13,13 +13,6 @@ parameters:
   rpConfigCommit: ''
   rpMode: ''
 
-resources:
-  repositories:
-    - repository: RPConfig
-      type: git
-      name: AzureRedHatOpenShift/RP-Config
-      ref: ${{ parameters.rpConfigCommit }}
-
 jobs:
 - ${{ each location in parameters.locations }}:
   - deployment: Deploy_${{ location }}
@@ -30,7 +23,8 @@ jobs:
       runOnce:
         deploy:
           steps:
-          - checkout: RPConfig
+          - checkout: |
+              git://AzureRedHatOpenShift/RP\-Config@${{ parameters.rpConfigCommit }}
           - script: |
               set -e
 
