--- a/pkg/operator/deploy/staticresources/aro.openshift.io_clusters.yaml
+++ b/pkg/operator/deploy/staticresources/aro.openshift.io_clusters.yaml
@@ -102,9 +102,8 @@ spec:
             description: ClusterStatus defines the observed state of Cluster
             properties:
               conditions:
-                description: Conditions is a set of Condition instances.
                 items:
-                  description: "Condition represents an observation of an object's
+                  description: Condition represents an observation of an object's
                     state. Conditions are an extension mechanism intended to be used
                     when the details of an observation are not a priori known or would
                     not apply to all instances of a given Kind. \n Conditions should
@@ -113,12 +112,16 @@ spec:
                     from other observations. Once defined, the meaning of a Condition
                     can not be changed arbitrarily - it becomes part of the API, and
                     has the same backwards- and forwards-compatibility concerns of
-                    any other part of the API."
+                    any other part of the API.
                   properties:
                     lastTransitionTime:
+                      description: Last time the condition transitioned from one status
+                        to another.
                       format: date-time
                       type: string
                     message:
+                      description: Human-readable message indicating details about
+                        last transition.
                       type: string
                     reason:
                       description: ConditionReason is intended to be a one-word, CamelCase
@@ -127,14 +130,16 @@ spec:
                         kubectl get output, and in summarizing occurrences of causes.
                       type: string
                     status:
+                      description: Status is the status of the condition. Can be True,
+                        False, Unknown.
                       type: string
                     type:
-                      description: "ConditionType is the type of the condition and
+                      description: ConditionType is the type of the condition and
                         is typically a CamelCased word or short phrase. \n Condition
                         types should indicate state in the \"abnormal-true\" polarity.
                         For example, if the condition indicates when a policy is invalid,
                         the \"is valid\" case is probably the norm, so the condition
-                        should be called \"Invalid\"."
+                        should be called \"Invalid\".
                       type: string
                   required:
                   - status
