--- a/Dockerfile.sshtool
+++ b/Dockerfile.sshtool
@@ -1,9 +1,13 @@
 FROM registry.access.redhat.com/ubi8/ubi
+RUN dnf update && dnf clean all
 RUN \
   rpm --import https://packages.microsoft.com/keys/microsoft.asc && \
   echo -e '[azure-cli]\nname=Azure CLI\nbaseurl=https://packages.microsoft.com/yumrepos/azure-cli' >/etc/yum.repos.d/azure-cli.repo && \
   dnf -y update && \
-  dnf -y --enablerepo=rhocp-4.4-for-rhel-8-x86_64-rpms install azure-cli less openshift-clients openssh-clients && \
+  dnf -y install azure-cli less openssh-clients && \
   dnf clean all
+RUN curl https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz | tar xvzf - -C /usr/local/bin oc
+RUN chmod ug+x /usr/local/bin
+ENV AZURE_FP_CLIENT_ID=f1dd0a37-89c6-4e07-bcd1-ffd3d43d8875
 COPY sshtool /usr/local/bin
 ENTRYPOINT ["sshtool"]
