--- a/pkg/operator/deploy/staticresources/aro.openshift.io_clusters.yaml
+++ b/pkg/operator/deploy/staticresources/aro.openshift.io_clusters.yaml
@@ -49,6 +49,8 @@ spec:
               features:
                 description: FeaturesSpec defines ARO operator feature gates
                 properties:
+                  reconcileMonitoring:
+                    type: boolean
                   reconcileNSGs:
                     type: boolean
                 type: object
